# force-plate-jump-analyses

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  env.yml  local_env.yml  pyproject.toml  setup.cfg  setup.py  study_1_batch_process.py  study_2_batch_process.py  study_3_batch_process.py  test_install.py
.github/workflows/: python-tests.yml
JumpMetrics/: __init__.py
JumpMetrics/core/: core.py  io.py
JumpMetrics/events/: cmj_events.py
JumpMetrics/metrics/: cmj_metrics.py
JumpMetrics/signal_processing/: filters.py  numerical.py
analyses/study_1/: batch_processed_data.csv  signal_conditioning_filter_cutoffs.xlsx
analyses/study_1/kinematic_data/F01/CTRL2/: group_cutoff.csv  group_cutoff_force_series.csv  literature_cutoff.csv  literature_cutoff_force_series.csv  no_cutoff.csv  no_cutoff_force_series.csv  participant_cutoff.csv  participant_cutoff_force_series.csv  trial_cutoff.csv  trial_cutoff_force_series.csv
analyses/study_1/kinematic_data/F01/CTRL3/: group_cutoff.csv  group_cutoff_force_series.csv  literature_cutoff.csv  literature_cutoff_force_series.csv  no_cutoff.csv  no_cutoff_force_series.csv  participant_cutoff.csv  participant_cutoff_force_series.csv  trial_cutoff.csv  trial_cutoff_force_series.csv
analyses/study_1/kinematic_data/F01/CTRL4/: group_cutoff.csv  group_cutoff_force_series.csv  literature_cutoff.csv  (+7 more)
analyses/study_1/raw_data/: F01_CTRL2_filtered.txt  F01_CTRL4_filtered.txt  F02_CTRL1_filtered.txt  F03_CTRL3_filtered.txt  F04_CTRL1_filtered.txt  F04_CTRL2_filtered.txt  F04_CTRL5_filtered.txt  F05_CTRL1_filtered.txt  F05_CTRL2_filtered.txt  F05_CTRL5_filtered.txt  F06_CTRL1_filtered.txt  F06_CTRL4_filtered.txt  F07_CTRL2_filtered.txt  F07_CTRL3_filtered.txt  F07_CTRL4_filtered.txt  F08_CTRL3_filtered.txt  F08_CTRL4_filtered.txt  F09_CTRL1_filtered.txt  F09_CTRL5_filtered.txt  F10_CTRL1_filtered.txt  F10_CTRL4_filtered.txt  F10_CTRL5_filtered.txt  M01_CTRL3_filtered.txt  M02_CTRL3_filtered.txt  M02_CTRL4_filtered.txt  M02_CTRL5_filtered.txt  M03_CTRL2_filtered.txt  M03_CTRL3_filtered.txt  M03_CTRL5_filtered.txt  M04_CTRL1_filtered.txt  M04_CTRL2_filtered.txt  M04_CTRL3_filtered.txt  M04_CTRL4_filtered.txt  M05_CTRL4_filtered.txt  M05_CTRL5_filtered.txt  M06_CTRL3_filtered.txt  M06_CTRL5_filtered.txt  M07_CTRL2_filtered.txt  M07_CTRL3_filtered.txt  M07_CTRL5_filtered.txt  (+24 more)
analyses/study_2/: batch_processed_data.csv
analyses/study_2/raw_data/: F01_CTRL1.txt
analyses/study_3/: batch_processed_cmj_data.csv  batch_processed_sqj_data.csv
analyses/study_3/raw_data/: FHOC_15_CMJ300008.txt  FHOC_15_CMJ500014.txt  FHOC_15_CMJ600015.txt  FHOC_15_CMJ700017.txt  FHOC_15_CMJ800019.txt  FHOC_15_SQT1000020.txt  FHOC_15_SQT100003.txt  FHOC_15_SQT200004.txt  FHOC_15_SQT300007.txt  FHOC_15_SQT500011.txt  FHOC_15_SQT600012.txt  FHOC_15_SQT700013.txt  FHOC_15_SQT800016.txt  FHOC_15_SQT900018.txt  FHOC_P01_CMJ100002.txt  FHOC_P01_CMJ200004.txt  FHOC_P01_CMJ300005.txt  FHOC_P01_CMJ400008.txt  FHOC_P01_CMJ500009.txt  FHOC_P01_CMJ600011.txt  FHOC_P01_CMJ700014.txt  FHOC_P01_CMJ800017.txt  FHOC_P01_CMJ900018.txt  FHOC_P01_SQT1000020.txt  FHOC_P01_SQT100003.txt  FHOC_P01_SQT200006.txt  FHOC_P01_SQT300007.txt  FHOC_P01_SQT400010.txt  FHOC_P01_SQT500012.txt  FHOC_P01_SQT600013.txt  FHOC_P01_SQT700015.txt  FHOC_P01_SQT800016.txt  FHOC_P01_SQT900019.txt  FHOC_P02_CMJ1000020.txt  FHOC_P02_CMJ100004.txt  FHOC_P02_CMJ200006.txt  FHOC_P02_CMJ300007.txt  FHOC_P02_CMJ400010.txt  FHOC_P02_CMJ500011.txt  FHOC_P02_CMJ600012.txt  (+679 more)
core/: core.py
docker_example/output/: jump_metrics.csv  kinematic_data.csv
docker_example/scripts/: docker_example.py
docs/: index.md
docs/api/: core.md  events.md  metrics.md  signal_processing.md
docs/development/: contributing.md
jumpmetrics/: __init__.py  __version__.py
jumpmetrics/core/: core.py  io.py  jump_processing.py  processors.py
jumpmetrics/events/: cmj_events.py  landing_events.py  sqj_events.py
jumpmetrics/metrics/: cmj_metrics.py  metrics.py
jumpmetrics/signal_processing/: filters.py  numerical.py
paper/: paper.bib  paper.md
src/jumpmetrics/: __init__.py
src/jumpmetrics/core/: io.py  jump_processing.py  processors.py
src/jumpmetrics/events/: cmj_events.py  sqj_events.py
src/jumpmetrics/metrics/: metrics.py
src/jumpmetrics/signal_processing/: filters.py  numerical.py
study_1_analyses/: batch_process.py  signal_conditioning_filter_cutoffs.xlsx
study_1_analyses/processed_data/: batch_processed_data.csv
study_1_analyses/raw_data/: F01_CTRL3_filtered.txt  F01_CTRL5_filtered.txt  F02_CTRL2_filtered.txt  F02_CTRL3_filtered.txt  F02_CTRL4_filtered.txt  F02_CTRL5_filtered.txt  F03_CTRL1_filtered.txt  F03_CTRL2_filtered.txt  F03_CTRL4_filtered.txt  F03_CTRL5_filtered.txt  F04_CTRL3_filtered.txt  F04_CTRL4_filtered.txt  F05_CTRL3_filtered.txt  F05_CTRL4_filtered.txt  F06_CTRL2_filtered.txt  F06_CTRL3_filtered.txt  F06_CTRL5_filtered.txt  F07_CTRL1_filtered.txt  F07_CTRL5_filtered.txt  F08_CTRL1_filtered.txt  F08_CTRL2_filtered.txt  F08_CTRL5_filtered.txt  F09_CTRL2_filtered.txt  F09_CTRL3_filtered.txt  F09_CTRL4_filtered.txt  F10_CTRL2_filtered.txt  F10_CTRL3_filtered.txt  M01_CTRL1_filtered.txt  M01_CTRL2_filtered.txt  M01_CTRL4_filtered.txt  M01_CTRL5_filtered.txt  M02_CTRL1_filtered.txt  M02_CTRL2_filtered.txt  M03_CTRL1_filtered.txt  M03_CTRL4_filtered.txt  M04_CTRL5_filtered.txt  M05_CTRL1_filtered.txt  M05_CTRL2_filtered.txt  M05_CTRL3_filtered.txt  M06_CTRL1_filtered.txt  (+19 more)
tests/: KNOWN_TEST_LIMITATIONS.md
tests/core/: test_core.py  test_io.py  test_processors_edge_cases.py
tests/events/: __init__.py  test_cmj_events.py  test_landing_events.py  test_sqj_events.py
tests/example_data/: batch_processed_data.csv  example_process_jump_trial_output.csv  example_process_squat_jump_trial_output.csv  p30_squat_jump_example_results.csv  p31_squat_jump_example_results.csv
tests/example_data/raw_data/: FHOC_P30_SQT300007.txt  M15_CTRL1_filtered.txt
tests/metrics/: __init__.py  test_metrics.py
tests/signal_processing/: test_filters.py  test_numerical.py
(+3427 files in other folders)
