[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpmetrics"
version = "0.1.0"
description = "A package for computing jump metrics from force plate data."
readme = "README.md"
authors = [{name = "Steven Hirsch", email = "stevehirsch94@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pip>=23.3",
    "pandas==2.0.*",
    "scipy==1.14.*",
    "matplotlib",
    "scikit-learn==1.3.*"
]
# readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[tool.setuptools.packages.find]
include = ["jumpmetrics*"]  # Include all packages starting with "jumpmetrics"
exclude = ["paper*", "tests*", "analyses*", "study_1_batch_process.py", "study_2_batch_process.py", "study_3_batch_process.py", "pytest.ini"]  # Exclude test and data directories

[project.urls]
"Homepage" = "https://github.com/stevenhirsch/force-plate-jump-analyses"
"Bug Tracker" = "https://github.com/stevenhirsch/force-plate-jump-analyses/issues"

# Remove or comment out the following section if you're not using it
# [tool.setuptools.dynamic]
# dependencies = {file = ["env.yml"]}