[metadata]
name=jumpmetrics
version=attr: JumpMetrics.__version__.__version__
license=MIT
author=Steven Hirsch
author_email=stevehirsch94@gmail.com
url=https://github.com/stevenhirsch/force-plate-jump-analyses
platforms=any
description=Package for computing jump events and metrics from force plate data

[options]
packages=find:
include_package_data=True
zip_safe=False
install_requires=
    pip>=22.2
    pandas==1.5.*
    scipy==1.9.*
python_requires=>=3.8

[options.package_data]
* = *.csv, *.xlsx

[options.packages.find]
exclude=
    # tests*
    analyses
    study_1_batch_process
    study_2_batch_process
